analysis- explaining categories

--- a/Scripts/Report.html
+++ b/Scripts/Report.html
@@ -382,8 +382,8 @@ sexual signalling.</p>
 <p>When investigating the minimum and maximum data points, a negative
 value for song duration became apparent. Believing this to be a typing
 error, I used the absolute values for song duration so as to avoid any
-impossible values. Only this variable was altered, as negative values
-are valid for other variables such as weight change.</p>
+impossible values. Only this variable was altered in such a way, as
+negative values are valid for other variables such as weight change.</p>
 </div>
 <div id="results-discussion" class="section level3">
 <h3><u><strong>Results &amp; Discussion</strong></u></h3>
