adding specificity to fig legend

--- a/Scripts/Report.html
+++ b/Scripts/Report.html
@@ -384,6 +384,10 @@ value for song duration became apparent. Believing this to be a typing
 error, I used the absolute values for song duration so as to avoid any
 impossible values. Only this variable was altered in such a way, as
 negative values are valid for other variables such as weight change.</p>
+<p>For some calculations and visualisations, the data was sorted into
+groups of Low (≤36%), Medium(=48%), and High(≥60%) nutrition diets. This
+allowed for better comparisons between the upper and lower groups as a
+whole by simplifying the number of categories.</p>
 </div>
 <div id="results-discussion" class="section level3">
 <h3><u><strong>Results &amp; Discussion</strong></u></h3>
