creating bibliography and adding first reference

--- a/Scripts/Report.html
+++ b/Scripts/Report.html
@@ -251,6 +251,28 @@ if (window.hljs) {
 
 
 
+<style type="text/css">
+
+div.csl-bib-body { }
+div.csl-entry {
+clear: both;
+}
+.hanging div.csl-entry {
+margin-left:2em;
+text-indent:-2em;
+}
+div.csl-left-margin {
+min-width:2em;
+float:left;
+}
+div.csl-right-inline {
+margin-left:2em;
+padding-left:1em;
+}
+div.csl-indent {
+margin-left: 2em;
+}
+</style>
 
 
 
@@ -382,7 +404,7 @@ names including decorated, tropical house, and banded cricket.</p>
 each other for the opportunity to mate with a female. These competitions
 can manifest as direct antagonism where males get into a physical
 conflict. Such is the case with red deer, as growing larger antlers to
-fight with correlates to a greater level of reproductive success <span class="citation">[@kruuk_2002]</span>. The other way the males can
+fight with correlates to a greater level of reproductive success <span class="citation">(Kruuk et al. 2002)</span>. The other way the males can
 outshine their peers is through courtship displays which are aimed to
 impress the females. A well-known example of this includes male birds
 such as peacocks sporting a large ornamental plumage. In the wild, this
@@ -460,16 +482,16 @@ category - Low (≤36%), Medium(=48%), and High(≥60%). Note when comparing
 the adjacent graphs that the y-axes are on different scales.</p>
 </div>
 </div>
-<div id="references" class="section level3">
-<h3><u><strong>References</strong></u></h3>
-<pre class="bib"><code> @article{Kruuk_2002,
-    author    = {Kruuk, LEB. and Slate, J. and Pemberton, JM. and Brotherstone, S. and Guinness, F. and Clutton-Brock, T.},
-    title     = {ANTLER SIZE IN RED DEER: HERITABILITY AND SELECTION BUT NO EVOLUTION},
-    journal   = {Evolution},
-    volume   = {56},
-    number   = {8},
-    pages    = {1683-1695},
-    year      = {2002}}</code></pre>
+<div id="references" class="section level3 unnumbered">
+<h3 class="unnumbered"><u><strong>References</strong></u></h3>
+<div id="refs" class="references csl-bib-body hanging-indent">
+<div id="ref-kruuk2002" class="csl-entry">
+Kruuk, Loeske E. B., Jon Slate, Josephine M. Pemberton, Sue
+Brotherstone, Fiona Guinness, and Tim Clutton-Brock. 2002. <span>“ANTLER
+SIZE IN RED DEER: HERITABILITY AND SELECTION BUT NO EVOLUTION.”</span>
+<em>Evolution</em> 56 (8): 1683–95. <a href="https://doi.org/10.1111/j.0014-3820.2002.tb01480.x">https://doi.org/10.1111/j.0014-3820.2002.tb01480.x</a>.
+</div>
+</div>
 </div>
 </div>
 
