--- a/Scripts/Report.html
+++ b/Scripts/Report.html
@@ -399,23 +399,22 @@ sexual signalling.</p>
 <div id="introduction" class="section level3">
 <h3><u><strong>Introduction</strong></u></h3>
 <p><em>Gryllodes sigillatus</em> is a species of cricket known by many
-names including decorated, tropical house, and banded cricket.</p>
+names including decorated, banded, and tropical house cricket.</p>
 <p>A common occurrence in nature is males of a species competing against
-each other for the opportunity to mate with a female. These competitions
-can manifest as direct antagonism where males get into a physical
-conflict. Such is the case with red deer, as growing larger antlers to
-fight with correlates to a greater level of reproductive success <span class="citation">(Kruuk et al. 2002)</span>. The other way the males can
+each other for the opportunity to mate with a female <span class="citation">(Cox and Le Boeuf 1977)</span>. These competitions can
+manifest as direct antagonism where males get into a physical conflict.
+Such is the case with red deer, as growing larger antlers to fight with
+correlates to a greater level of reproductive success <span class="citation">(Kruuk et al. 2002)</span>. The other way the males can
 outshine their peers is through courtship displays which are aimed to
 impress the females. A well-known example of this includes male birds
 such as peacocks sporting a large ornamental plumage. In the wild, this
 colourful addition could be seen as a counter-intuitive for survival,
-making it more difficult to hide from and escape predators. However,
-this is exactly why it is so attractive to females of the species. If an
-individual can survive despite their handicap they must be of good
-fitness, a quality that females will want to pass on to their offspring.
-As well as physical traits, many mating displays come in the form of a
-dance or song, as is the case with the decorated cricket detailed in
-this paper.</p>
+making it more difficult to hide from and escape predators <span class="citation">(Burk 1982)</span>. However, this is exactly why it is
+so attractive to females of the species - If an individual can survive
+despite their handicap they must be of good fitness, a quality that
+females will want to pass on to their offspring <span class="citation">(Andersson 1986)</span>. As well as physical traits,
+many mating displays come in the form of a dance or song, as is the case
+with the decorated cricket detailed in this paper.</p>
 </div>
 <div id="analysis" class="section level3">
 <h3><u><strong>Analysis</strong></u></h3>
@@ -485,6 +484,21 @@ the adjacent graphs that the y-axes are on different scales.</p>
 <div id="references" class="section level3 unnumbered">
 <h3 class="unnumbered"><u><strong>References</strong></u></h3>
 <div id="refs" class="references csl-bib-body hanging-indent">
+<div id="ref-andersson1986" class="csl-entry">
+Andersson, Malte. 1986. <span>“EVOLUTION OF CONDITION-DEPENDENT SEX
+ORNAMENTS AND MATING PREFERENCES: SEXUAL SELECTION BASED ON VIABILITY
+DIFFERENCES.”</span> <em>Evolution</em> 40 (4): 804–16. <a href="https://doi.org/10.1111/j.1558-5646.1986.tb00540.x">https://doi.org/10.1111/j.1558-5646.1986.tb00540.x</a>.
+</div>
+<div id="ref-burk1982" class="csl-entry">
+Burk, T. 1982. <span>“Evolutionary Significance of Predation on Sexually
+Signalling Males.”</span> <em>The Florida Entomologist</em> 65 (1): 90.
+<a href="https://doi.org/10.2307/3494148">https://doi.org/10.2307/3494148</a>.
+</div>
+<div id="ref-cox1977" class="csl-entry">
+Cox, Cathleen R., and Burney J. Le Boeuf. 1977. <span>“Female Incitation
+of Male Competition: A Mechanism in Sexual Selection.”</span> <em>The
+American Naturalist</em> 111 (978): 317–35. <a href="https://doi.org/10.1086/283163">https://doi.org/10.1086/283163</a>.
+</div>
 <div id="ref-kruuk2002" class="csl-entry">
 Kruuk, Loeske E. B., Jon Slate, Josephine M. Pemberton, Sue
 Brotherstone, Fiona Guinness, and Tim Clutton-Brock. 2002. <span>“ANTLER
