--- a/Scripts/Report.html
+++ b/Scripts/Report.html
@@ -414,19 +414,24 @@ females will want to pass on to their offspring <span class="citation">(Andersso
 many mating displays come in the form of a dance or song, as is the case
 with the decorated cricket detailed in this paper.</p>
 <p><em>Gryllodes sigillatus</em> is a species of cricket known by many
-names including decorated, banded, and tropical house cricket.</p>
-<p>In fact, the song produced can be so alluring to the female that, if
-other crickets’ songs can be heard nearby, a male cricket will
-increasingly engage in mate guarding behaviours; actions such as
-isolating the mated female in a burrow ensure paternity by preventing
-the female from mating multiple times <span class="citation">(Bateman
-and MacFadyen 1999)</span>.</p>
-<p>Not only does a male’s song work to attract females and dissuade
-possible rival males, but female <em>Gryllodes sigillatus</em> crickets
-exposed to the acoustic displays of their species reach their full mass
-quicker than females exposed to heterospecific songs or no songs. This
+names including decorated, banded, and tropical house cricket. The
+signalling song produced by males is facilitated by the orthopteran
+insect&#39;s forewings and antennae and works, via the principles outlined
+above, to attract a female mate <span class="citation">(Subramaniam and
+Subramoniam 1990)</span>. In fact, the song produced can be so alluring
+to the female that, if other crickets’ songs can be heard nearby, a male
+cricket will increasingly engage in mate guarding behaviours; actions
+such as isolating the mated female in a burrow ensure paternity by
+preventing the female from mating multiple times <span class="citation">(Bateman and MacFadyen 1999)</span>. Not only does a
+male’s song work to attract females and dissuade possible rival males,
+but female <em>Gryllodes sigillatus</em> crickets exposed to the
+acoustic displays of their species reach their full mass quicker than
+females exposed to heterospecific songs or no songs<span class="citation">(Bateman, Verburgt, and Ferguson 2005)</span>. This
 would mean that the females are able to reach sexual maturity quicker
-when in the presence of viable mates.</p>
+when in the presence of viable mates. Due to the importance of sexual
+signalling on a cricket’s ability to reproduce, this paper aims to look
+at what factors can influence singing ability, more specifically the
+affects of nutrition on individuals.</p>
 </div>
 <div id="analysis" class="section level3">
 <h3><u><strong>Analysis</strong></u></h3>
@@ -507,6 +512,12 @@ Bateman, Philip W., and Duncan N. MacFadyen. 1999. <span>“Mate Guarding
 in the Cricket Gryllodes Sigillatus: Influence of Multiple Potential
 Partners.”</span> <em>Ethology</em> 105 (11): 949–57. <a href="https://doi.org/10.1046/j.1439-0310.1999.00484.x">https://doi.org/10.1046/j.1439-0310.1999.00484.x</a>.
 </div>
+<div id="ref-bateman2005" class="csl-entry">
+Bateman, Philip W., L. Verburgt, and J. W. H. Ferguson. 2005.
+<span>“Exposure to Male Song Increases Rate of Egg Development in the
+Cricket *Gryllodes Sigillatus*.”</span> <em>African Zoology</em> 40 (2):
+323–26. <a href="https://doi.org/10.10520/EJC17961">https://doi.org/10.10520/EJC17961</a>.
+</div>
 <div id="ref-burk1982" class="csl-entry">
 Burk, T. 1982. <span>“Evolutionary Significance of Predation on Sexually
 Signalling Males.”</span> <em>The Florida Entomologist</em> 65 (1): 90.
@@ -522,6 +533,13 @@ Kruuk, Loeske E. B., Jon Slate, Josephine M. Pemberton, Sue
 Brotherstone, Fiona Guinness, and Tim Clutton-Brock. 2002. <span>“ANTLER
 SIZE IN RED DEER: HERITABILITY AND SELECTION BUT NO EVOLUTION.”</span>
 <em>Evolution</em> 56 (8): 1683–95. <a href="https://doi.org/10.1111/j.0014-3820.2002.tb01480.x">https://doi.org/10.1111/j.0014-3820.2002.tb01480.x</a>.
+</div>
+<div id="ref-subramaniam1990" class="csl-entry">
+Subramaniam, M., and T. Subramoniam. 1990. <span>“Mating Behaviour and
+Spermatophore Transfer in <span><em>Gryllodes Sigillatus</em></span>
+(Walker) (Orthoptera: Gryllidae).”</span> <em>Mitteilungen Aus Dem
+Museum Für Naturkunde in Berlin. Zoologisches Museum Und Institut Für
+Spezielle Zoologie (Berlin)</em> 66 (1): 65–71. <a href="https://doi.org/10.1002/mmnz.19900660108">https://doi.org/10.1002/mmnz.19900660108</a>.
 </div>
 </div>
 </div>
