intro - adding my hypotheses, and adding placeholder notes for things I need to add

--- a/Scripts/Report.html
+++ b/Scripts/Report.html
@@ -418,6 +418,11 @@ when in the presence of viable mates. Due to the importance that sexual
 signalling has on a cricket’s ability to reproduce, this paper aims to
 look at what factors can influence singing ability, more specifically,
 the affects of nutrition on male individuals.</p>
+<p>I hypothesise that males with a more nutritious diet will have a
+greater increase in weight. As a result of this, I also predict that
+individuals will sing for a greater duration if their diet has a greater
+nutritional percentage, as more resources can be allocated to the costly
+signalling act.</p>
 </div>
 <div id="analysis" class="section level3">
 <h3><u><strong>Analysis</strong></u></h3>
@@ -454,9 +459,9 @@ technique has been used despite not being a perfect example.</p>
 <h5><strong>DIET AND WEIGHT CHANGE</strong></h5>
 <p>I hypothesised that the greater the nutritional percentage of a
 cricket’s diet, the more weight it would gain over the course of the
-observational period. To test this, I compared the weight gain of
-crickets in the groups of Low, Medium, and High nutrition using a
-general linear model.</p>
+observational period of a week. To test this, I compared the weight gain
+of crickets in the groups of Low, Medium, and High nutrition using the
+linear model described previously.</p>
 <p>When looking at the two ends of the scale, it was seen that crickets
 with a diet of high nutritional value (&gt;60%) gained an average of . ,
 which is</p>
@@ -490,10 +495,11 @@ respectively illustrated by the middle line, box, and whiskers on their
 plot. Outliers are shown as circular filled plots.
 <strong>RIGHT:</strong> The mean song duration in seconds is presented
 to 4 significant figures for each nutritional category - Low (≤36%),
-Medium(=48%), and High(≥60%).</p>
+Medium(=48%), and High(≥60%). Error bars extend one standard deviation
+above and below the mean.</p>
 <p>The ability of a male cricket to sing for a greater duration than
 their peers has a great impact on their fitness, as a longer song would
-imply a greater chance of mating through the principles of sexual
+suggest a greater chance of mating through the principles of sexual
 selection.</p>
 <p>A common occurrence in nature is males of a species competing against
 each other for the opportunity to mate with a female <span class="citation">(Cox and Le Boeuf 1977)</span>. These competitions can
