writing significance/conclusion

--- a/Scripts/Report.html
+++ b/Scripts/Report.html
@@ -424,12 +424,11 @@ to the costly signalling act.</p>
 </div>
 <div id="analysis" class="section level3">
 <h3><u><strong>Analysis</strong></u></h3>
-<p>This report was produced using R version 4.2.3 <span class="citation">(R Core Team 2023)</span> The following packages were
-used during the data analysis and visualisation process: tidyverse <span class="citation">(Wickham et al. 2019)</span>, colorBlindness <span class="citation">(Ou 2021)</span>, rstatix <span class="citation">(Kassambara 2021)</span>, performance <span class="citation">(Lüdecke et al. 2021)</span>, MASS <span class="citation">(Venables and Ripley 2002)</span>, broom <span class="citation">(Robinson, Hayes, and Couch 2022)</span> and patchwork
-<span class="citation">(Pedersen 2022)</span>.</p>
-<p>The data-set used to investigate the hypothesis detailed above
+<p>The data-set used to investigate the hypotheses detailed above
 contains information collected over the course of a week pertaining to
-male crickets’ nutrition, song duration, weight change, and size.</p>
+male crickets’ nutrition, song duration, weight change, and size. R
+version 4.2.3 <span class="citation">(R Core Team 2023)</span> was used
+to both analyse the data and produce this report.</p>
 <p>When investigating the minimum and maximum data points, a negative
 value for song duration became apparent. Believing this to be a typing
 error, I used the absolute values for song duration so as to avoid any
@@ -538,8 +537,11 @@ be of good fitness, a quality that females will want to pass on to their
 offspring <span class="citation">(Andersson 1986)</span>.</p>
 </div>
 </div>
-<div id="references" class="section level3 unnumbered">
-<h3 class="unnumbered"><u><strong>References</strong></u></h3>
+<div id="references" class="section level3">
+<h3><u><strong>References</strong></u></h3>
+<p>This report was produced using R version 4.2.3 <span class="citation">(R Core Team 2023)</span> The following packages were
+used during the data analysis and visualisation process: tidyverse <span class="citation">(Wickham et al. 2019)</span>, colorBlindness <span class="citation">(Ou 2021)</span>, rstatix <span class="citation">(Kassambara 2021)</span>, performance <span class="citation">(Lüdecke et al. 2021)</span>, MASS <span class="citation">(Venables and Ripley 2002)</span>, broom <span class="citation">(Robinson, Hayes, and Couch 2022)</span> and patchwork
+<span class="citation">(Pedersen 2022)</span>.</p>
 <div id="refs" class="references csl-bib-body hanging-indent">
 <div id="ref-andersson1986" class="csl-entry">
 Andersson, Malte. 1986. <span>“EVOLUTION OF CONDITION-DEPENDENT SEX
