--- a/README.html
+++ b/README.html
@@ -373,14 +373,19 @@ the length of sexual signalling songs in the decorated cricket.</p>
 <p><strong>Main findings:</strong></p>
 <ul>
 <li><p>The more nutritional the cricket’s diet, the more weight they
-gain</p></li>
-<li><p>The more they weigh, the longer the cricket’s singing
-lasts</p></li>
+gain - For each 12% increase in nutrition, a cricket will gain an
+additional 0.005 grams.</p></li>
+<li><p>The more nutritional the cricket’s diet, the longer they sing -
+Each 12% increase in nutrition increases song duration by 0.37
+seconds.</p></li>
 </ul>
-<p><strong>Conclusion:</strong></p>
+<p><strong>General Conclusion:</strong></p>
 <ul>
 <li>Crickets with a more nutritional diet will gain more weight and also
 have more energy to expend on performing the costly calling song.</li>
+<li>The longer a cricket’s song, the more likely it is to attract a
+female, so diet quality subsequently has an influence on reproductive
+ability</li>
 </ul>
 </div>
 
