--- a/Scripts/Report.html
+++ b/Scripts/Report.html
@@ -555,9 +555,20 @@ expend. Both of these results increase a male cricket’s chance of
 winning over a mate, as not only are female <em>Gryllodes
 sigillatus</em> attracted to longer acoustic displays, they prefer the
 songs of bigger individuals <span class="citation">(Kiflawi and Gray
-2000)</span>. As found in this investigation, bigger crickets produce a
-longer song on average, so it can be inferred that song duration is what
-indicates to the female a male’s size and therefore fitness.</p>
+2000)</span>. Whilst this was found to be true in regards to weight in
+this data, wherein crickets gaining more mass generally produced a
+longer song, it was seen that size in terms of a cricket’s length did
+not have a significant influence over song duration which may require
+further investigation.</p>
+<p>In this investigation, it was found that crickets with a greater
+level of nutrition in their diet will become larger in terms of mass and
+also produce a longer song on average. It can be inferred from this that
+song duration is what indicates to the female a male’s fitness, and
+therefore a longer song will increase an individual’s chances of
+attracting a mate. In this way, nutrition has an influence over the
+reproductive success of male <em>Gryllodes sigillatus</em> , most
+probably due to an increased availability of resources available for
+complex behaviours once basic energetic needs are met<em>.</em></p>
 </div>
 </div>
 <div id="references" class="section level3">
