explaining why packages were used

--- a/Scripts/Report.html
+++ b/Scripts/Report.html
@@ -445,6 +445,15 @@ nutrition leads to an increased duration of singing.</p>
 the weight change of crickets with the nutritional percentage of their
 diet as a categorical predictor. This was done in order to address the
 hypothesis that diet has an impact on weight change.</p>
+<p>The following packages were used during the data analysis and
+visualisation process: tidyverse to transform and present data <span class="citation">(Wickham et al. 2019)</span>, colorBlindness to check
+plot accessibility <span class="citation">(Ou 2021)</span>, rstatix for
+statistical tests <span class="citation">(Kassambara 2021)</span>,
+performance for evaluating the fit of models <span class="citation">(Lüdecke et al. 2021)</span>, MASS to perform boxcox
+function <span class="citation">(Venables and Ripley 2002)</span>, broom
+to tidy data and outputs <span class="citation">(Robinson, Hayes, and
+Couch 2022)</span>, and patchwork to combine multiple plots into single
+visuals <span class="citation">(Pedersen 2022)</span>.</p>
 </div>
 <div id="results-discussion" class="section level3">
 <h3><u><strong>Results &amp; Discussion</strong></u></h3>
@@ -555,36 +564,32 @@ corresponds to the percentage of nutrition in the cricket’s diet from
 <p>As this investigation found that greater nutrition corresponds with
 an increased song duration, maintaining a quality diet is important for
 the success of male crickets. Nutrition also facilitates weight gain
-which also increases a male&#39;s chance of winning over a mate, as not only
-are female Gryllodes sigillatus attracted to longer acoustic displays,
-but they also prefer the songs of bigger individuals <span class="citation">(Kiflawi and Gray 2000)</span>. Whilst this was found
+which also increases a male’s chance of winning over a mate, as not only
+are female <em>Gryllodes sigillatus</em> attracted to longer acoustic
+displays, but they also prefer the songs of bigger individuals <span class="citation">(Kiflawi and Gray 2000)</span>. Whilst this was found
 to be true in regards to weight in this data, wherein the crickets
 consuming a more nutritional diet were both gaining more mass
 and generally producing a longer song, it was seen that size in terms of
-a cricket&#39;s length did not have a significant influence over song
+a cricket’s length did not have a significant influence over song
 duration which may be a downfall of the data and require further
 investigation.</p>
 <p>It could be concluded from these results that the length of song
-produced by Gryllodes sigillatus males is what indicates their fitness
-and therefore potential as a mate to females of the species, therefore a
-longer song would increase an individual&#39;s chance of mating. It is known
-from previous research that Gryllodes sigillatus individuals with a
-greater level of fitness require lower metabolic maintenance and are
-also better able to allocate resources <span class="citation">(Ketola
-and Kotiaho 2009)</span>. This means that fitter individuals would have
-more surplus resources to put towards the production of a signalling
-song, especially when on a highly nutritious diet. In this way,
-nutrition has an influence over the reproductive success of male
-Gryllodes sigillatus, due to an increased availability of resources
-available for complex mating behaviours once basic energetic needs are
-met.</p>
+produced by <em>Gryllodes sigillatus</em> males is what indicates their
+fitness and therefore potential as a mate to females of the species, so
+a longer song would increase an individual’s chance of mating. It is
+known from previous research that individuals with a greater level of
+fitness require lower metabolic maintenance and are also better able to
+allocate resources <span class="citation">(Ketola and Kotiaho
+2009)</span>. This means that fitter individuals would have more surplus
+resources to put towards the production of a signalling song, especially
+when on a highly nutritious diet. In this way, nutrition has an
+influence over the reproductive success of male <em>Gryllodes
+sigillatus</em>, due to an increased availability of resources available
+for complex mating behaviours once basic energetic needs are met.</p>
 </div>
 </div>
-<div id="references" class="section level3">
-<h3><u><strong>References</strong></u></h3>
-<p>This report was produced using R version 4.2.3 <span class="citation">(R Core Team 2023)</span> The following packages were
-used during the data analysis and visualisation process: tidyverse <span class="citation">(Wickham et al. 2019)</span>, colorBlindness <span class="citation">(Ou 2021)</span>, rstatix <span class="citation">(Kassambara 2021)</span>, performance <span class="citation">(Lüdecke et al. 2021)</span>, MASS <span class="citation">(Venables and Ripley 2002)</span>, broom <span class="citation">(Robinson, Hayes, and Couch 2022)</span> and patchwork
-<span class="citation">(Pedersen 2022)</span>.</p>
+<div id="references" class="section level3 unnumbered">
+<h3 class="unnumbered"><u><strong>References</strong></u></h3>
 <div id="refs" class="references csl-bib-body hanging-indent">
 <div id="ref-andersson1986" class="csl-entry">
 Andersson, Malte. 1986. <span>“EVOLUTION OF CONDITION-DEPENDENT SEX
