adding package references to readme

--- a/README.html
+++ b/README.html
@@ -251,6 +251,28 @@ if (window.hljs) {
 
 
 
+<style type="text/css">
+
+div.csl-bib-body { }
+div.csl-entry {
+clear: both;
+}
+.hanging div.csl-entry {
+margin-left:2em;
+text-indent:-2em;
+}
+div.csl-left-margin {
+min-width:2em;
+float:left;
+}
+div.csl-right-inline {
+margin-left:2em;
+padding-left:1em;
+}
+div.csl-indent {
+margin-left: 2em;
+}
+</style>
 
 
 
@@ -387,6 +409,51 @@ have more energy to expend on performing the costly calling song.</li>
 female, so diet quality subsequently has an influence on reproductive
 ability</li>
 </ul>
+<p>The following packages were used during the data analysis and
+visualisation process: tidyverse to transform and present data <span class="citation">(Wickham et al. 2019)</span>, colorBlindness to check
+plot accessibility <span class="citation">(Ou 2021)</span>, rstatix for
+statistical tests <span class="citation">(Kassambara 2021)</span>,
+performance for evaluating the fit of models <span class="citation">(Lüdecke et al. 2021)</span>, MASS to perform boxcox
+function <span class="citation">(Venables and Ripley 2002)</span>, broom
+to tidy data and outputs <span class="citation">(Robinson, Hayes, and
+Couch 2022)</span>, and patchwork to combine multiple plots into single
+visuals <span class="citation">(Pedersen 2022)</span>.</p>
+<p><strong>References</strong></p>
+<div id="refs" class="references csl-bib-body hanging-indent">
+<div id="ref-rstatix" class="csl-entry">
+Kassambara, Alboukadel. 2021. <span>“Rstatix: Pipe-Friendly Framework
+for Basic Statistical Tests.”</span> <a href="https://rpkgs.datanovia.com/rstatix/">https://rpkgs.datanovia.com/rstatix/</a>.
+</div>
+<div id="ref-performance" class="csl-entry">
+Lüdecke, Daniel, Mattan S. Ben-Shachar, Indrajeet Patil, Philip
+Waggoner, and Dominique Makowski. 2021.
+<span>“<span></span>Performance<span></span>: An
+<span></span>r<span></span> Package for Assessment, Comparison and
+Testing of Statistical Models”</span> 6: 3139. <a href="https://doi.org/10.21105/joss.03139">https://doi.org/10.21105/joss.03139</a>.
+</div>
+<div id="ref-colorBlindness" class="csl-entry">
+Ou, Jianhong. 2021. <span>“colorBlindness: Safe Color Set for Color
+Blindness.”</span>
+</div>
+<div id="ref-patchwork" class="csl-entry">
+Pedersen, Thomas Lin. 2022. <span>“Patchwork: The Composer of
+Plots.”</span>
+</div>
+<div id="ref-broom" class="csl-entry">
+Robinson, David, Alex Hayes, and Simon Couch. 2022. <span>“Broom:
+Convert Statistical Objects into Tidy Tibbles.”</span>
+</div>
+<div id="ref-MASS" class="csl-entry">
+Venables, W. N., and B. D. Ripley. 2002. <span>“Modern Applied
+Statistics with s.”</span> <a href="https://www.stats.ox.ac.uk/pub/MASS4/">https://www.stats.ox.ac.uk/pub/MASS4/</a>.
+</div>
+<div id="ref-tidyverse" class="csl-entry">
+Wickham, Hadley, Mara Averick, Jennifer Bryan, Winston Chang, Lucy
+D’Agostino McGowan, Romain François, Garrett Grolemund, et al. 2019.
+<span>“Welcome to the <span></span>Tidyverse<span></span>”</span> 4:
+1686. <a href="https://doi.org/10.21105/joss.01686">https://doi.org/10.21105/joss.01686</a>.
+</div>
+</div>
 </div>
 
 
